Ya se ve la img avatar, perfil adaptado para varios usus, inicio de las publicaciones

--- a/artist4all_angular/src/app/components/public/page-not-found/page-not-found.component.html
+++ b/artist4all_angular/src/app/components/public/page-not-found/page-not-found.component.html
@@ -12,7 +12,7 @@
                 <p>Intenta buscándola otra vez o usa el botón de ir hacia atrás que está debajo.</p>
             </div>
             <div class="mb-20 md:mb-0">
-                <button (click)="backClicked();" class="text-lg font-light outline-none focus:outline-none transform transition-all hover:scale-110 text-yellow-500 hover:text-yellow-600"><i class="mdi mdi-arrow-left mr-2"></i>Ir hacia atrás</button>
+                <button routerLink="" class="text-lg font-light outline-none focus:outline-none transform transition-all hover:scale-110 text-yellow-500 hover:text-yellow-600"><i class="mdi mdi-arrow-left mr-2"></i>Ir hacia atrás</button>
             </div>
         </div>
         <div class="w-full md:w-1/2 text-center">
