--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -6,6 +6,7 @@
     <div class="py-10">
       <div class="max-w-3xl mx-auto sm:px-6 lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-12 lg:gap-8">
         <main class="lg:col-span-9 xl:col-span-7">
+          <button routerLink="/publication"> Crear publicación </button> <!-- todo faltan estilos -->
           <div class="px-4 sm:px-0"></div>
           <div class="">
             <h1 class="sr-only">Recent questions</h1>
