--- a/artist4all_angular/src/app/components/secure/user-settings/user-settings.component.html
+++ b/artist4all_angular/src/app/components/secure/user-settings/user-settings.component.html
@@ -127,7 +127,7 @@
                       <label for="user-photo" class="absolute inset-0 w-full h-full bg-black bg-opacity-75 flex items-center justify-center text-sm font-medium text-white opacity-0 hover:opacity-100 focus-within:opacity-100">
                         <span>Change</span>
                         <span class="sr-only"> user photo</span>
-                        <input type="file" (change)="handleFileInput($event.target.files)" id="img" name="img" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer border-gray-300 rounded-md">
+                        <input type="file" (change)="changeImgAvatar($event.target.files)" id="imgAvatar" name="img" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer border-gray-300 rounded-md">
                       </label>
                     </div>
                   </div>
