--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -13,6 +13,9 @@
         <li>
           <a routerLink="/messages" class="p-3 hover:text-purple-600"><i class="fas fa-paper-plane mr-3"></i>Mensajería</a>
         </li>
+        <li>
+          <a routerLink="/users" class="p-3 hover:text-purple-600"><i class="fas fa-users mr-3"></i>Usuarios</a>
+        </li>
     </ul>
     <div class="flex-1 px-4 flex justify-between ml-3">
       <div class="flex-1 flex">
@@ -41,17 +44,17 @@
     </div>
     <ul class="flex items-center">
       <div class="ml-4">
-         {{ name }} {{ surname1 }}
+         {{ user.name }} {{ user.surname1 }}
       </div>
       <div class="ml-3 relative">
         <div (click)="isMenuDisplayed()">
           <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
             <span class="sr-only">Open user menu</span>
-            <img class="h-8 w-8 rounded-full" src="{{ imgAvatar }}" alt="imgAvatar">
+            <img class="h-8 w-8 rounded-full" src="{{ user.imgAvatar }}" alt="imgAvatar">
           </button>
         </div>
         <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden z-40" id="menu-toggle" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-          <a routerLink="/profile" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
+          <a routerLink="/profile/my" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
           <a routerLink="/settings" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
           <a routerLink="" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
         </div>
