--- a/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
@@ -24,7 +24,7 @@
           <div class="divide-y divide-gray-200 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
             <aside class="py-6 lg:col-span-3">
               <nav>
-                <a (click)="changeSection('profile');" id="profile" class="bg-teal-50 border-teal-500 text-teal-700 hover:bg-teal-50 hover:text-teal-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" aria-current="page">
+                <a routerLink="/settings/profile" id="profile" class="bg-teal-50 border-teal-500 text-teal-700 hover:bg-teal-50 hover:text-teal-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" aria-current="page">
                   <svg class="text-teal-500 group-hover:text-teal-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                   </svg>
@@ -33,7 +33,7 @@
                   </span>
                 </a>
 
-                <a (click)="changeSection('account');" id="account" class="border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group mt-1 border-l-4 px-3 py-2 flex items-center text-sm font-medium">
+                <a routerLink="/settings/account" id="account" class="border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group mt-1 border-l-4 px-3 py-2 flex items-center text-sm font-medium">
                   <svg class="text-gray-400 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
@@ -43,7 +43,7 @@
                   </span>
                 </a>
 
-                <a (click)="changeSection('password');" id="password" class="border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group mt-1 border-l-4 px-3 py-2 flex items-center text-sm font-medium">
+                <a routerLink="/settings/password" id="password" class="border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group mt-1 border-l-4 px-3 py-2 flex items-center text-sm font-medium">
                   <svg class="text-gray-400 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
                   </svg>
@@ -117,16 +117,16 @@
                     <div class="mt-1 lg:hidden">
                       <div class="flex items-center">
                         <div class="flex-shrink-0 inline-block rounded-full overflow-hidden h-12 w-12" aria-hidden="true">
-                          <img class="rounded-full h-full w-full" src="{{ imgAvatar }}" alt="">
+                          <img class="rounded-full h-full w-full" src="{{ imgAvatar }}" alt="img_avatar">
                         </div>
                       </div>
                     </div>
 
                     <div class="hidden relative rounded-full overflow-hidden lg:block">
-                      <img class="relative rounded-full w-40 h-40" src="{{ imgAvatar }}" alt="">
+                      <img class="relative rounded-full w-40 h-40" src="{{ imgAvatar }}" alt="img_avatar">
                       <label for="user-photo" class="absolute inset-0 w-full h-full bg-black bg-opacity-75 flex items-center justify-center text-sm font-medium text-white opacity-0 hover:opacity-100 focus-within:opacity-100">
-                        <span>Change</span>
-                        <span class="sr-only"> user photo</span>
+                        <span>Cambiar</span>
+                        <span class="sr-only">Foto de usuario</span>
                         <input type="file" (change)="changeImgAvatar($event.target.files)" id="imgAvatar" name="img" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer border-gray-300 rounded-md">
                       </label>
                     </div>
@@ -162,128 +162,6 @@
                   <div class="col-span-12 sm:col-span-6">
                     <label for="company" class="block text-sm font-medium text-gray-700">Company</label>
                     <input type="text" name="company" id="company" autocomplete="organization" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-light-blue-500 focus:border-light-blue-500 sm:text-sm">
-                  </div>
-                </div>
-              </div>
-
-              <div class="pt-6 divide-y divide-gray-200">
-                <div class="mt-4 py-4 px-4 flex justify-end sm:px-6">
-                  <button routerLink="/home" class="bg-white border border-gray-300 rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500">
-                    Volver a la home
-                  </button>
-                  <button type="submit" class="ml-5 bg-blue-500 border border-transparent rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-white hover:bg-light-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500">
-                    Guardar los cambios
-                  </button>
-                </div>
-              </div>
-            </form>
-
-          <div id="formAccount" class="divide-y divide-gray-200 lg:col-span-9 hidden">
-            <form #formAccount="ngForm" method="POST" (ngSubmit)=" formAccount.reset()">
-             <!-- !darte de baja y estas cosas, cambiar email tal vez, perfil visible publicamente, notificaciones, fondo oscuro... -->
-              <!-- Privacy section -->
-              <div class="pt-6 divide-y divide-gray-200">
-                <div class="px-4 sm:px-6">
-                  <div>
-                    <h2 class="text-lg leading-6 font-medium text-gray-900">Privacidad</h2>
-                    <p class="mt-1 text-sm text-gray-500">
-                      Ornare eu a volutpat eget vulputate. Fringilla commodo amet.
-                    </p>
-                  </div>
-                  <ul class="mt-2 divide-y divide-gray-200">
-                    <li class="py-4 flex items-center justify-between">
-                      <div class="flex flex-col">
-                        <p class="text-sm font-medium text-gray-900" id="privacy-option-1-label">
-                          Available to hire
-                        </p>
-                        <p class="text-sm text-gray-500" id="privacy-option-1-description">
-                          Nulla amet tempus sit accumsan. Aliquet turpis sed sit lacinia.
-                        </p>
-                      </div>
-                      <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
-                      <button type="button" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="true" aria-labelledby="privacy-option-1-label" aria-describedby="privacy-option-1-description">
-                        <span class="sr-only">Use setting</span>
-                        <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-                        <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
-                      </button>
-                    </li>
-                    <li class="py-4 flex items-center justify-between">
-                      <div class="flex flex-col">
-                        <p class="text-sm font-medium text-gray-900" id="privacy-option-2-label">
-                          Make account private
-                        </p>
-                        <p class="text-sm text-gray-500" id="privacy-option-2-description">
-                          Pharetra morbi dui mi mattis tellus sollicitudin cursus pharetra.
-                        </p>
-                      </div>
-                      <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
-                      <button type="button" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="false" aria-labelledby="privacy-option-2-label" aria-describedby="privacy-option-2-description">
-                        <span class="sr-only">Use setting</span>
-                        <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-                        <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
-                      </button>
-                    </li>
-                    <li class="py-4 flex items-center justify-between">
-                      <div class="flex flex-col">
-                        <p class="text-sm font-medium text-gray-900" id="privacy-option-3-label">
-                          Allow commenting
-                        </p>
-                        <p class="text-sm text-gray-500" id="privacy-option-3-description">
-                          Integer amet, nunc hendrerit adipiscing nam. Elementum ame
-                        </p>
-                      </div>
-                      <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
-                      <button type="button" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="true" aria-labelledby="privacy-option-3-label" aria-describedby="privacy-option-3-description">
-                        <span class="sr-only">Use setting</span>
-                        <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-                        <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
-                      </button>
-                    </li>
-                    <li class="py-4 flex items-center justify-between">
-                      <div class="flex flex-col">
-                        <p class="text-sm font-medium text-gray-900" id="privacy-option-4-label">
-                          Allow mentions
-                        </p>
-                        <p class="text-sm text-gray-500" id="privacy-option-4-description">
-                          Adipiscing est venenatis enim molestie commodo eu gravid
-                        </p>
-                      </div>
-                      <!-- Enabled: "bg-teal-500", Not Enabled: "bg-gray-200" -->
-                      <button type="button" class="bg-gray-200 ml-4 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500" aria-pressed="true" aria-labelledby="privacy-option-4-label" aria-describedby="privacy-option-4-description">
-                        <span class="sr-only">Use setting</span>
-                        <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
-                        <span aria-hidden="true" class="translate-x-0 inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200"></span>
-                      </button>
-                    </li>
-                  </ul>
-                </div>
-                <div class="mt-4 py-4 px-4 flex justify-end sm:px-6">
-                  <button routerLink="/home" class="bg-white border border-gray-300 rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500">
-                    Volver a la home
-                  </button>
-                  <button type="submit" class="ml-5 bg-blue-500 border border-transparent rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-white hover:bg-light-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500">
-                    Guardar los cambios
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-
-            <form #formPassword="ngForm" id="formPassword" class="divide-y divide-gray-200 lg:col-span-9 hidden" method="POST" (ngSubmit)="editPassword(); formPassword.reset()">
-              <div class="py-6 px-4 sm:p-6 lg:pb-8">
-                <div>
-                  <h2 class="text-lg leading-6 font-medium text-gray-900">Cambiar mi contraseña</h2>
-                </div>
-
-                <div class="mt-6 grid grid-cols-12 gap-6">
-                  <div class="col-span-12">
-                    <label for="newPassowrd" class="block text-sm font-medium text-gray-700">Nueva contraseña:</label>
-                    <input #inputNewPassword="ngModel" [(ngModel)]="newPassword" type="password" name="newPassword" id="newPassword" placeholder="Mi nueva contraseña" required autocomplete="family-name" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-light-blue-500 focus:border-light-blue-500 sm:text-sm">
-                  </div>
-
-                  <div class="col-span-12">
-                    <label for="confirmPassowrd" class="block text-sm font-medium text-gray-700">Confirma tu nueva contraseña:</label>
-                    <input #inputConfirmPassword="ngModel" [(ngModel)]="confirmPassword" type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirma tu contraseña" required autocomplete="family-name" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-light-blue-500 focus:border-light-blue-500 sm:text-sm">
                   </div>
                 </div>
               </div>
