--- a/artist4all_angular/src/app/components/public/contact/contact.component.html
+++ b/artist4all_angular/src/app/components/public/contact/contact.component.html
@@ -1,4 +1,3 @@
-<app-user-navbar></app-user-navbar>
 <div class="relative bg-white">
     <div class="lg:absolute lg:inset-0">
       <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
@@ -51,8 +50,8 @@
                 <textarea id="how_can_we_help" name="how_can_we_help" aria-describedby="how_can_we_help_description" rows="4" class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md"></textarea>
               </div>
             </div>
-            <div class="text-center md:text-right">
-              <button type="submit" class="inline-flex md:mb-24 justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <div class="text-center md:text-right ml-10">
+              <button type="submit" class="inline-flex md:mb-24 ml-96 justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                 Enviar
               </button>
             </div>
@@ -61,4 +60,4 @@
       </div>
     </div>
   </div>
-  
+<app-footer></app-footer>
