--- a/artist4all_angular/src/app/components/secure/profile/profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/profile.component.html
@@ -1,7 +1,13 @@
-<app-user-navbar></app-user-navbar>
+<ngx-spinner
+  bdColor="rgb(255, 255, 255)"
+  size="medium"
+  template="<img src='assets/img/loadingSpinner.gif'/>">
+  <p style="font-size: 20px;">Cargando...</p>
+</ngx-spinner>
+<app-user-navbar *ngIf="loaded"></app-user-navbar>
 
-<div class="h-screen flex overflow-hidden bg-white">
-    <app-user-sidebar></app-user-sidebar>
+  <div class="h-screen flex overflow-hidden bg-white" *ngIf="loaded">
+    <app-user-sidebar *ngIf="loaded"></app-user-sidebar>
     <div class="flex flex-col min-w-0 flex-1 overflow-hidden">
       <div class="flex-1 relative z-0 flex overflow-hidden">
         <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none xl:order-last" tabindex="0">
