creación de publicaciones con imagenes, usuario puede modificar perfil sin cambiar img avatar, fix de errores en modelos

--- a/artist4all_angular/src/app/components/secure/publications/create-publication/create-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/create-publication/create-publication.component.html
@@ -7,7 +7,7 @@
   <label for="body">Cuerpo:</label> <br>
   <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" cols="100" rows="8"></textarea> <br>
   <label for="imgOptional">Imagen(opcional): </label>
-<!--   <input type="file" (change)="addImgPublication($event.target.files)" id="imgPublication"/> <br> -->
+  <input type="file" (change)="addImgPublication($event.target.files)" id="imgPublication" multiple/> <br>
   <button routerLink="/home"> Cancelar </button>
   <input type="submit" value="Publicar"/>
 </form>
