header and sidebar styled

--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -1,100 +1,136 @@
-<div>
-  <nav class="p-6 bg-white h-14 flex justify-between">
-    <ul class="flex items-center">
-        <li>
-            <a routerLink="/home" class="p-3"><img src="assets/img/logo.png" alt="logo" class="h-8"></a>
-        </li>
-        <li>
-            <a routerLink="/home" class="p-3 hover:text-purple-600 ml-8">Home</a>
-        </li>
-        <li>
-            <a routerLink="/store" class="p-3 hover:text-purple-600">Tienda</a>
-        </li>
-        <li>
-          <a routerLink="/message" class="p-3 hover:text-purple-600">Mensajería</a>
-        </li>
-        <li>
-          <a routerLink="/user" class="p-3 hover:text-purple-600">Usuarios</a>
-        </li>
-    </ul>
-    <div class="flex-1 flex items-center justify-left px-2 lg:ml-6">
-      <div class="w-10/12">
-        <label for="search" class="sr-only">Search</label>
-        <div class="relative">
-          <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-            <!-- Heroicon name: solid/search -->
-            <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
-            </svg>
+<header class="bg-white shadow-sm lg:static lg:overflow-y-visible">
+  <div class="max-w-full mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="relative flex justify-between xl:grid xl:grid-cols-12 lg:gap-8">
+      <div class="flex md:absolute md:left-0 md:inset-y-0 lg:static xl:col-span-2">
+        <div class="flex-shrink-0 flex items-center">
+          <a href="/home">
+            <img class="block h-8 w-auto" src="assets/img/logo.png" alt="Workflow">
+          </a>
+        </div>
+      </div>
+      <div class="min-w-0 flex-1 md:px-8 lg:px-0 xl:col-span-7">
+        <div class="flex items-center px-6 py-4 md:max-w-3xl md:mx-auto lg:max-w-none lg:mx-0 xl:px-0">
+          <div class="w-full">
+            <label for="search" class="sr-only">Search</label>
+            <div class="relative">
+              <div class="pointer-events-none absolute inset-y-0 left-0 pl-3 flex items-center">
+                <!-- Heroicon name: solid/search -->
+                <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+                </svg>
+              </div>
+              <input id="search" name="search" class="block w-full bg-white border border-gray-300 rounded-md py-2 pl-10 pr-3 text-sm placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1 focus:ring-rose-500 focus:border-rose-500 sm:text-sm" placeholder="Search" type="search">
+            </div>
           </div>
-          <input id="search" name="search" class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white shadow-sm placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-blue-600 focus:border-blue-600 sm:text-sm" placeholder="Buscar" type="search">
         </div>
       </div>
-    </div>
-    <div class="ml-4 mr-6 flex items-center md:ml-6" (click)="toggleNotifications();">
-      <button class="bg-white p-1 rounded-full text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-        <span class="sr-only">View notifications</span>
-        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-        </svg>
-      </button>
-      <div id="menuNotifications" class="w-2/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
-        <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
-            <img class="h-8 w-8 rounded-full object-cover mx-1"
-                src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
-                alt="avatar">
-            <p class="text-gray-600 text-sm mx-2">
-                <span class="font-bold" href="#">Sara Salah</span> replied on the <span
-                    class="font-bold text-blue-500" href="#">Upload Image</span> artical .
-                2m
-            </p>
-        </a>
-        <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
-        <img class="h-8 w-8 rounded-full object-cover mx-1"
-            src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
-            alt="avatar">
-        <p class="text-gray-600 text-sm mx-2">
-            <span class="font-bold" href="#">Slick Net</span> start following you . 45m
-        </p>
-    </a>
-    <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
-        <img class="h-8 w-8 rounded-full object-cover mx-1"
-            src="https://images.unsplash.com/photo-1450297350677-623de575f31c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
-            alt="avatar">
-        <p class="text-gray-600 text-sm mx-2">
-            <span class="font-bold" href="#">Jane Doe</span> Like Your reply on <span
-                class="font-bold text-blue-500" href="#">Test with TDD</span> artical . 1h
-        </p>
-    </a>
-    <a href="#" class="flex items-center px-4 py-3 hover:bg-gray-100 -mx-2">
-        <img class="h-8 w-8 rounded-full object-cover mx-1"
-            src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=398&q=80"
-            alt="avatar">
-        <p class="text-gray-600 text-sm mx-2">
-            <span class="font-bold" href="#">Abigail Bennett</span> start following you . 3h
-        </p>
-    </a>
-<a href="/dashboard/notifications" id="subMenu" class="block bg-gray-800 text-white text-center font-bold py-2">See all
-    notifications</a>
-    </div>
-    </div>
-    <ul class="flex items-center">
-      <!--<div class="ml-4">
-         {{ user.name }} {{ user.surname1 }}
-      </div>-->
-      <div class="ml-3 relative">
-        <div (click)="isMenuDisplayed()">
-          <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
-            <span class="sr-only">Open user menu</span>
-            <img class="h-8 w-8 rounded-full" src="{{ user.imgAvatar }}" alt="imgAvatar">
-          </button>
-        </div>
-        <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden z-40" id="menu-toggle" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-          <a routerLink="/profile/my" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
-          <a routerLink="/settings/profile" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
-          <a routerLink="" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
-        </div>
+      <div class="hidden lg:flex lg:items-center lg:justify-end xl:col-span-3">
+        <div (click)="toggleNotifications();">
+        <button href="#" class="ml-5 bg-white rounded-full p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
+          <span class="sr-only">View notifications</span>
+          <!-- Heroicon name: outline/bell -->
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+          </svg>
+        </button>
+        <div id="menuNotifications" class="w-2/12 absolute right-0 top-12 mt-2 bg-white rounded-md shadow-lg overflow-hidden z-20 hidden">
+          <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
+              <img class="h-8 w-8 rounded-full object-cover mx-1"
+                  src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
+                  alt="avatar">
+              <p class="text-gray-600 text-sm mx-2">
+                  <span class="font-bold" href="#">Sara Salah</span> replied on the <span
+                      class="font-bold text-blue-500" href="#">Upload Image</span> artical .
+                  2m
+              </p>
+          </a>
+          <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
+          <img class="h-8 w-8 rounded-full object-cover mx-1"
+              src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+              alt="avatar">
+          <p class="text-gray-600 text-sm mx-2">
+              <span class="font-bold" href="#">Slick Net</span> start following you . 45m
+          </p>
+      </a>
+      <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
+          <img class="h-8 w-8 rounded-full object-cover mx-1"
+              src="https://images.unsplash.com/photo-1450297350677-623de575f31c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"
+              alt="avatar">
+          <p class="text-gray-600 text-sm mx-2">
+              <span class="font-bold" href="#">Jane Doe</span> Like Your reply on <span
+                  class="font-bold text-blue-500" href="#">Test with TDD</span> artical . 1h
+          </p>
+      </a>
+      <a href="#" class="flex items-center px-4 py-3 hover:bg-gray-100 -mx-2">
+          <img class="h-8 w-8 rounded-full object-cover mx-1"
+              src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=398&q=80"
+              alt="avatar">
+          <p class="text-gray-600 text-sm mx-2">
+              <span class="font-bold" href="#">Abigail Bennett</span> start following you . 3h
+          </p>
+      </a>
+  <a href="/dashboard/notifications" id="subMenu" class="block bg-gray-800 text-white text-center font-bold py-2">See all
+      notifications</a>
       </div>
-    </ul>
+      </div>
+        <ul class="flex items-center">
+          <!--<div class="ml-4">
+             {{ user.name }} {{ user.surname1 }}
+          </div>-->
+          <div class="ml-3 relative">
+            <div (click)="isMenuDisplayed()">
+              <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
+                <span class="sr-only">Open user menu</span>
+                <img class="h-8 w-8 rounded-full" src="{{ user.imgAvatar }}" alt="imgAvatar">
+              </button>
+            </div>
+            <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden z-40" id="menu-toggle" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
+              <a routerLink="/profile/my" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
+              <a routerLink="/settings/profile" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
+              <a routerLink="" (click)="isMenuDisplayed()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
+            </div>
+          </div>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Mobile menu, show/hide based on menu state. -->
+  <nav class="lg:hidden" aria-label="Global">
+    <div class="max-w-3xl mx-auto px-2 pt-2 pb-3 space-y-1 sm:px-4">
+      <!-- Current: "bg-gray-100 text-gray-900", Default: "hover:bg-gray-50" -->
+      <a href="#" aria-current="page" class="bg-gray-100 text-gray-900 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Home</a>
+
+      <a href="#" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Popular</a>
+
+      <a href="#" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Communities</a>
+
+      <a href="#" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Trending</a>
+    </div>
+    <div class="border-t border-gray-200 pt-4 pb-3">
+      <div class="max-w-3xl mx-auto px-4 flex items-center sm:px-6">
+        <div class="flex-shrink-0">
+          <img class="h-10 w-10 rounded-full" src="{{ user.imgAvatar }}" alt="imgAvatar">
+        </div>
+        <div class="ml-3">
+          <div class="text-base font-medium text-gray-800">{{ user.name }} {{ user.surname1 }}</div>
+          <div class="text-sm font-medium text-gray-500">{{ user.email }}</div>
+        </div>
+        <button type="button" class="ml-auto flex-shrink-0 bg-white rounded-full p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
+          <span class="sr-only">View notifications</span>
+          <!-- Heroicon name: outline/bell -->
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+          </svg>
+        </button>
+      </div>
+      <div class="mt-3 max-w-3xl mx-auto px-2 space-y-1 sm:px-4">
+        <a routerLink="/profile/my" (click)="isMenuDisplayed()" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900" id="menu-toggle" role="menu">Mi perfil</a>
+
+        <a routerLink="/settings/profile" (click)="isMenuDisplayed()" role="menuitem" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Configuración</a>
+
+        <a routerLink="" (click)="isMenuDisplayed()" role="menuitem" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Cerrar sesión</a>
+      </div>
+    </div>
   </nav>
-</div>
+</header>
