--- a/artist4all_angular/src/app/components/secure/user-sidebar/user-sidebar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-sidebar/user-sidebar.component.html
@@ -8,7 +8,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
         </svg>
         <span class="truncate">
-          Home
+          <a routerLink="/home" class="p-3 hover:text-purple-600 ml-8">Home</a>
         </span>
       </a>
 
@@ -19,7 +19,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z" />
         </svg>
         <span class="truncate">
-          Popular
+          <a routerLink="/store" class="p-3 hover:text-purple-600">Tienda</a>
         </span>
       </a>
 
@@ -29,7 +29,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
         </svg>
         <span class="truncate">
-          Communities
+          <a routerLink="/message" class="p-3 hover:text-purple-600">Mensajería</a>
         </span>
       </a>
 
@@ -39,63 +39,9 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
         </svg>
         <span class="truncate">
-          Trending
+          <a routerLink="/user" class="p-3 hover:text-purple-600">Usuarios</a>
         </span>
       </a>
-    </div>
-    <div class="pt-10">
-      <p class="px-3 text-xs font-semibold text-gray-500 uppercase tracking-wider" id="communities-headline">
-        My communities
-      </p>
-      <div class="mt-3 space-y-2" aria-labelledby="communities-headline">
-        <a href="#" class="group flex items-center px-3 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50">
-          <span class="truncate">
-            Movies
-          </span>
-        </a>
-
-        <a href="#" class="group flex items-center px-3 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50">
-          <span class="truncate">
-            Food
-          </span>
-        </a>
-
-        <a href="#" class="group flex items-center px-3 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50">
-          <span class="truncate">
-            Sports
-          </span>
-        </a>
-
-        <a href="#" class="group flex items-center px-3 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50">
-          <span class="truncate">
-            Animals
-          </span>
-        </a>
-
-        <a href="#" class="group flex items-center px-3 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50">
-          <span class="truncate">
-            Science
-          </span>
-        </a>
-
-        <a href="#" class="group flex items-center px-3 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50">
-          <span class="truncate">
-            Dinosaurs
-          </span>
-        </a>
-
-        <a href="#" class="group flex items-center px-3 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50">
-          <span class="truncate">
-            Talents
-          </span>
-        </a>
-
-        <a href="#" class="group flex items-center px-3 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50">
-          <span class="truncate">
-            Gaming
-          </span>
-        </a>
-      </div>
     </div>
   </nav>
 </div>
