--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -4,7 +4,7 @@
       <div class="flex md:absolute md:left-0 md:inset-y-0 lg:static xl:col-span-2">
         <div class="flex-shrink-0 flex items-center">
           <a href="/home">
-            <img class="block h-8 w-auto" src="assets/img/logo.png" alt="Workflow">
+            <img class="block h-8 w-auto ml-4" src="assets/img/logo.png" alt="logo">
           </a>
         </div>
       </div>
@@ -26,7 +26,7 @@
       </div>
       <div class="hidden lg:flex lg:items-center lg:justify-end xl:col-span-3">
         <div (click)="toggleNotifications();">
-        <button href="#" class="ml-5 bg-white rounded-full p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
+        <button href="#" class="bg-white rounded-full p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
           <span class="sr-only">View notifications</span>
           <!-- Heroicon name: outline/bell -->
           <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -99,13 +99,13 @@
   <nav class="lg:hidden" aria-label="Global">
     <div class="max-w-3xl mx-auto px-2 pt-2 pb-3 space-y-1 sm:px-4">
       <!-- Current: "bg-gray-100 text-gray-900", Default: "hover:bg-gray-50" -->
-      <a href="#" aria-current="page" class="bg-gray-100 text-gray-900 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Home</a>
+      <a routerLink="/home" aria-current="page" class="bg-gray-100 text-gray-900 block rounded-md py-2 px-3 text-base font-medium">Home</a>
 
-      <a href="#" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Popular</a>
+      <a routerLink="/store" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Tienda</a>
 
-      <a href="#" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Communities</a>
+      <a routerLink="/message" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Mensajes</a>
 
-      <a href="#" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Trending</a>
+      <a routerLink="/user" class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Usuarios</a>
     </div>
     <div class="border-t border-gray-200 pt-4 pb-3">
       <div class="max-w-3xl mx-auto px-4 flex items-center sm:px-6">
