Arreglar public view

--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -6,7 +6,7 @@
 </ngx-spinner>
 <app-user-navbar *ngIf="loaded"></app-user-navbar>
 
-<div class="h-screen flex overflow-hidden bg-white">
+<div class="h-screen flex overflow-hidden bg-white" *ngIf="loaded">
     <div class="flex flex-col min-w-0 flex-1 overflow-hidden">
       <div class="flex-1 relative z-0 flex overflow-hidden">
         <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none xl:order-last" tabindex="0">
