Get de publicaciones propias, con fechas adaptadas

--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -80,7 +80,7 @@
               </div>
             </div>
 
-            <article aria-labelledby="question-title-81614" class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+            <article aria-labelledby="question-title-81614" class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8" *ngFor="let publication of publications; index as i;">
               <div>
                 <div class="flex space-x-3">
                   <div class="min-w-0 flex-1">
