--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -53,7 +53,7 @@
           </nav>
         </div>
         <main class="lg:col-span-8 xl:col-span-7">
-          <button routerLink="/publication"> Crear publicación </button> <!-- todo faltan estilos -->
+          <button routerLink="/profile/my/publication"> Crear publicación </button> <!-- todo faltan estilos -->
           <form action="/posts/new" method="POST" class="flex mb-4 flex-col">
             <textarea class="w-full resize-y rounded-md shadow border-0 text-sm flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
                 rows="5" name="content" placeholder="Escribe algo..."></textarea>
